--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/studentv1
+spring.datasource.username=root
+spring.datasource.password=87654321
 
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
