--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/studentv1
-spring.datasource.username=root
-spring.datasource.password=87654321
+spring.datasource.url=${JDBCUrl}
+spring.datasource.username=${JDBCUsername}
+spring.datasource.password=${JDBCPassword}
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
