--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url=${JDBCUrl}
-spring.datasource.username=${JDBCUsername}
-spring.datasource.password=${JDBCPassword}
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.show-sql=true
+spring.h2.console.enabled=true
